projeto finalizado de um gerenciador de tarefas simples

--- a/projeto final/index.html
+++ b/projeto final/index.html
@@ -12,6 +12,15 @@
         <input type="text" placeholder="Digite uma tarefa" id="tarefa">
         <button onclick="obj.CriarTarefa()">Confirmar</button>
     </div>
+    <section class="Nome_container">
+        <h2>A fazer</h2>
+        <h2>Fazendo</h2>
+        <h2>Feito</h2>
+
+
+
+
+    </section>
     <section class="container">
         <div class="partição" id="div_Fazer">
 
